--- a/Dashboard/templates/login.html
+++ b/Dashboard/templates/login.html
@@ -11,15 +11,6 @@
     <link href="../assets/vendor/fonts/circular-std/style.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/libs/css/style.css">
     <link rel="stylesheet" href="../assets/vendor/fonts/fontawesome/css/fontawesome-all.css">
-    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
-    <link href="assets/vendor/fonts/circular-std/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/libs/css/style.css">
-    <link rel="stylesheet" href="assets/vendor/fonts/fontawesome/css/fontawesome-all.css">
-    <link rel="stylesheet" href="assets/vendor/charts/chartist-bundle/chartist.css">
-    <link rel="stylesheet" href="assets/vendor/charts/morris-bundle/morris.css">
-    <link rel="stylesheet" href="assets/vendor/fonts/material-design-iconic-font/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="assets/vendor/charts/c3charts/c3.css">
-    <link rel="stylesheet" href="assets/vendor/fonts/flag-icon-css/flag-icon.min.css">
 </head>
 
 <body>
@@ -34,7 +25,9 @@
         <!-- ============================================================== -->
         <!-- ============================================================== -->
         <!-- left sidebar -->
-        {%include 'includes/sidebar.html' %}
+        {% if 2==2 %}
+            {%include 'includes/sidebar.html' %}
+        {% endif %}
         <!-- end left sidebar -->
         <!-- ============================================================== -->
         <!-- ============================================================== -->
@@ -47,7 +40,40 @@
                         <h3 class="text-center">Content goes here!</h3>
                     </div>
                 </div>
+            </div><!-- login page  -->
+            <!-- ============================================================== -->
+            <div class="splash-container">
+                <div class="card ">
+                    <div class="card-header text-center"><a href="/"><img class="logo-img" src="../assets/images/logo.png" alt="logo"></a><span class="splash-description">Please enter your user information.</span></div>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <input class="form-control form-control-lg" id="username" type="text" placeholder="Email" autocomplete="off">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control form-control-lg" id="password" type="password" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <label class="custom-control custom-checkbox">
+                                    <input class="custom-control-input" type="checkbox"><span class="custom-control-label">Remember Me</span>
+                                </label>
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
+                        </form>
+                    </div>
+                    <div class="card-footer bg-white p-0  ">
+                        <div class="card-footer-item card-footer-item-bordered">
+                            <a href="#" class="footer-link">Create An Account</a></div>
+                        <div class="card-footer-item card-footer-item-bordered">
+                            <a href="#" class="footer-link">Forgot Password</a>
+                        </div>
+                    </div>
+                </div>
             </div>
+          
+            <!-- ============================================================== -->
+            <!-- end login page  -->
+
             <!-- ============================================================== -->
             <!-- footer -->
             {% include 'includes/footer.html' %}
@@ -63,25 +89,6 @@
     <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="../assets/vendor/slimscroll/jquery.slimscroll.js"></script>
     <script src="../assets/libs/js/main-js.js"></script>
-    <script src="assets/vendor/jquery/jquery-3.3.1.min.js"></script>
-    <!-- bootstap bundle js -->
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
-    <!-- slimscroll js -->
-    <script src="assets/vendor/slimscroll/jquery.slimscroll.js"></script>
-    <!-- main js -->
-    <script src="assets/libs/js/main-js.js"></script>
-    <!-- chart chartist js -->
-    <script src="assets/vendor/charts/chartist-bundle/chartist.min.js"></script>
-    <!-- sparkline js -->
-    <script src="assets/vendor/charts/sparkline/jquery.sparkline.js"></script>
-    <!-- morris js -->
-    <script src="assets/vendor/charts/morris-bundle/raphael.min.js"></script>
-    <script src="assets/vendor/charts/morris-bundle/morris.js"></script>
-    <!-- chart c3 js -->
-    <script src="assets/vendor/charts/c3charts/c3.min.js"></script>
-    <script src="assets/vendor/charts/c3charts/d3-5.4.0.min.js"></script>
-    <script src="assets/vendor/charts/c3charts/C3chartjs.js"></script>
-    <script src="assets/libs/js/dashboard-ecommerce.js"></script>
 </body>
  
 </html>
