--- a/Dashboard/templates/register.html
+++ b/Dashboard/templates/register.html
@@ -11,15 +11,6 @@
     <link href="../assets/vendor/fonts/circular-std/style.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/libs/css/style.css">
     <link rel="stylesheet" href="../assets/vendor/fonts/fontawesome/css/fontawesome-all.css">
-    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
-    <link href="assets/vendor/fonts/circular-std/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/libs/css/style.css">
-    <link rel="stylesheet" href="assets/vendor/fonts/fontawesome/css/fontawesome-all.css">
-    <link rel="stylesheet" href="assets/vendor/charts/chartist-bundle/chartist.css">
-    <link rel="stylesheet" href="assets/vendor/charts/morris-bundle/morris.css">
-    <link rel="stylesheet" href="assets/vendor/fonts/material-design-iconic-font/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="assets/vendor/charts/c3charts/c3.css">
-    <link rel="stylesheet" href="assets/vendor/fonts/flag-icon-css/flag-icon.min.css">
 </head>
 
 <body>
@@ -34,7 +25,9 @@
         <!-- ============================================================== -->
         <!-- ============================================================== -->
         <!-- left sidebar -->
-        {%include 'includes/sidebar.html' %}
+        {% if 2==2 %}
+            {%include 'includes/sidebar.html' %}
+        {% endif %}
         <!-- end left sidebar -->
         <!-- ============================================================== -->
         <!-- ============================================================== -->
@@ -48,6 +41,34 @@
                     </div>
                 </div>
             </div>
+            <form class="splash-container" action="/registerUser" method="POST">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="mb-1">Registration</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="form-group">
+                            <input class="form-control form-control-lg" type="text" name="name" required="" placeholder="Name" autocomplete="off">
+                        </div>
+                        <!-- <div class="form-group">
+                            <input class="form-control form-control-lg" type="email" name="email" required="" placeholder="E-mail" autocomplete="off">
+                        </div> -->
+                        <div class="form-group">
+                            <input class="form-control form-control-lg" id="pass1" name="password" type="password" required="" placeholder="Password">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control form-control-lg" type="password" required="" name="confirm_password" placeholder="Confirm">
+                        </div>
+                        <div class="form-group pt-2">
+                            <button class="btn btn-block btn-primary" type="submit">Register Account</button>
+                        </div>
+                    </div>
+                    <div class="card-footer bg-white">
+                        <p>Already member? <a href="/login" class="text-secondary">Login Here.</a></p>
+                    </div>
+                </div>
+            </form>
+
             <!-- ============================================================== -->
             <!-- footer -->
             {% include 'includes/footer.html' %}
@@ -63,25 +84,6 @@
     <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="../assets/vendor/slimscroll/jquery.slimscroll.js"></script>
     <script src="../assets/libs/js/main-js.js"></script>
-    <script src="assets/vendor/jquery/jquery-3.3.1.min.js"></script>
-    <!-- bootstap bundle js -->
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
-    <!-- slimscroll js -->
-    <script src="assets/vendor/slimscroll/jquery.slimscroll.js"></script>
-    <!-- main js -->
-    <script src="assets/libs/js/main-js.js"></script>
-    <!-- chart chartist js -->
-    <script src="assets/vendor/charts/chartist-bundle/chartist.min.js"></script>
-    <!-- sparkline js -->
-    <script src="assets/vendor/charts/sparkline/jquery.sparkline.js"></script>
-    <!-- morris js -->
-    <script src="assets/vendor/charts/morris-bundle/raphael.min.js"></script>
-    <script src="assets/vendor/charts/morris-bundle/morris.js"></script>
-    <!-- chart c3 js -->
-    <script src="assets/vendor/charts/c3charts/c3.min.js"></script>
-    <script src="assets/vendor/charts/c3charts/d3-5.4.0.min.js"></script>
-    <script src="assets/vendor/charts/c3charts/C3chartjs.js"></script>
-    <script src="assets/libs/js/dashboard-ecommerce.js"></script>
 </body>
  
 </html>
