--- a/Dashboard/templates/login.html
+++ b/Dashboard/templates/login.html
@@ -37,33 +37,42 @@
             <div class="container-fluid dashboard-content">
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                        <h3 class="text-center">Content goes here!</h3>
+                        <h3 class="text-center">LOG IN</h3>
                     </div>
                 </div>
             </div><!-- login page  -->
             <!-- ============================================================== -->
             <div class="splash-container">
                 <div class="card ">
-                    <div class="card-header text-center"><a href="/"><img class="logo-img" src="../assets/images/logo.png" alt="logo"></a><span class="splash-description">Please enter your user information.</span></div>
+                    <div class="card-header text-center"></a><span class="splash-description">Please enter your user information.</span></div>
+                    
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category,message in messages %}
+                        <div class="alert alert-{{category}}">{{message}}</div>
+                    {% endfor %}
+                {% endif %}
+                {% endwith %}
+                
                     <div class="card-body">
-                        <form>
+                        <form action="/login" method="POST">
                             <div class="form-group">
-                                <input class="form-control form-control-lg" id="username" type="text" placeholder="Email" autocomplete="off">
+                                <input class="form-control form-control-lg" id="username" type="text" name="name" placeholder="Username" autocomplete="off">
                             </div>
                             <div class="form-group">
-                                <input class="form-control form-control-lg" id="password" type="password" placeholder="Password">
+                                <input class="form-control form-control-lg" id="password" type="password" name="password" placeholder="Password">
                             </div>
                             <div class="form-group">
                                 <label class="custom-control custom-checkbox">
                                     <input class="custom-control-input" type="checkbox"><span class="custom-control-label">Remember Me</span>
                                 </label>
-                            </div>
-                            <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
+                            </div class="form-group">
+                            <input type="submit" class="btn btn-primary btn-lg btn-block" value="Sign In">
                         </form>
                     </div>
                     <div class="card-footer bg-white p-0  ">
                         <div class="card-footer-item card-footer-item-bordered">
-                            <a href="#" class="footer-link">Create An Account</a></div>
+                            <a href="/register" class="footer-link">Create An Account</a></div>
                         <div class="card-footer-item card-footer-item-bordered">
                             <a href="#" class="footer-link">Forgot Password</a>
                         </div>
@@ -76,7 +85,7 @@
 
             <!-- ============================================================== -->
             <!-- footer -->
-            {% include 'includes/footer.html' %}
+            <!-- {% include 'includes/footer.html' %} -->
             <!-- end footer -->
             <!-- ============================================================== -->
         </div>
