--- a/Dashboard/templates/register.html
+++ b/Dashboard/templates/register.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
             </div>
-            <form class="splash-container" action="/registerUser" method="POST">
+            <form class="splash-container" action="/register" method="POST">
                 <div class="card">
                     <div class="card-header">
                         <h3 class="mb-1">Registration</h3>
@@ -50,17 +50,18 @@
                         <div class="form-group">
                             <input class="form-control form-control-lg" type="text" name="name" required="" placeholder="Name" autocomplete="off">
                         </div>
-                        <!-- <div class="form-group">
+                        <div class="form-group">
                             <input class="form-control form-control-lg" type="email" name="email" required="" placeholder="E-mail" autocomplete="off">
-                        </div> -->
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control form-control-lg" type="number" name="govtid" required="" placeholder="Goverment ID" autocomplete="off">
+                        </div>
                         <div class="form-group">
                             <input class="form-control form-control-lg" id="pass1" name="password" type="password" required="" placeholder="Password">
                         </div>
+                        
                         <div class="form-group">
-                            <input class="form-control form-control-lg" type="password" required="" name="confirm_password" placeholder="Confirm">
-                        </div>
-                        <div class="form-group pt-2">
-                            <button class="btn btn-block btn-primary" type="submit">Register Account</button>
+                            <input type="submit" class="btn btn-block btn-primary" value="Register Account">
                         </div>
                     </div>
                     <div class="card-footer bg-white">
