--- a/Dashboard/templates/area_status.html
+++ b/Dashboard/templates/area_status.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
- 
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../assets/libs/css/style.css">
     <link rel="stylesheet" href="../assets/vendor/fonts/fontawesome/css/fontawesome-all.css">
     <link href="../assets/vendor/fonts/circular-std/style.css" rel="stylesheet">
-    
+
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <!-- main wrapper -->
     <!-- ============================================================== -->
     <div class="dashboard-main-wrapper">
-         <!-- ============================================================== -->
+        <!-- ============================================================== -->
         <!-- navbar -->
         {%include 'includes/navbar.html' %}
         <!-- end navbar -->
@@ -36,145 +36,116 @@
         <div class="dashboard-wrapper">
             <div class="container-fluid dashboard-content">
                 <div class="row">
-                        <div class="col-xl-9 col-lg-12 col-md-6 col-sm-12 col-12">
-                            <div class="card">
-                                <h5 class="card-header">Recent Area</h5>
-                                <div class="card-body p-0">
-                                    <div class="table-responsive">
-                                        <table class="table">
-                                            <thead class="bg-light">
-                                                <tr class="border-0">
-                                                    <th class="border-0">#</th>
-                                                    <th class="border-0">Area Name</th>
-                                                    <th class="border-0">Area Id</th>
-                                                    <th class="border-0">Total Area (km<sup>2</sup>)</th>
-                                                    <th class="border-0">Scan Time</th>
-                                                    <th class="border-0">Officer<th>
-                                                    <th class="border-0">Status</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td>1</td>
-                                                    <td>Madhupur</td>
-                                                    <td>id000001 </td>
-                                                    <td>20</td>
-                                                    <td>27-08-2018 01:22:12</td>
-                                                    <td>Patricia J. King </td>
-                                                    <td><span class="badge-dot badge-brand mr-1"></span> Yellow leaf detected </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>2</td>
-                                                    <td>Madhupur</td>
-                                                    <td>id000002 </td>
-                                                    <td>12</td>
-                                                    <td>25-08-2018 21:12:56</td>
-                                                    <td>Rachel J. Wicker </td>
-                                                    <td><span class="badge-dot badge-success mr-1"></span>Yellow leaf detected </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>3</td>
-                                                    <td>Madhupur</td>
-                                                    <td>id000003 </td>
-                                                    <td>23</td>
-                                                    <td>24-08-2018 14:12:77</td>
-                                                    <td>Michael K. Ledford </td>
-                                                    <td><span class="badge-dot badge-success mr-1"></span>Yellow leaf detected </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>4</td>
-                                                    <td>Madhupur</td>
-                                                    <td>id000004 </td>
-                                                    <td>34</td>
-                                                    <td>23-08-2018 09:12:35</td>
-                                                    <td>Michael K. Ledford </td>
-                                                    <td><span class="badge-dot badge-success mr-1"></span>Yellow leaf detected </td>
-                                                </tr>
-                                                <tr>
-                                                    <td colspan="9"><a href="#" class="btn btn-outline-light float-right">View Details</a></td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-xl-9 col-lg-12 col-md-6 col-sm-12 col-12">
                         <div class="card">
-                            <h5 class="card-header">Plants</h5>
-                            <div class="card-body">
-                                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                                    <div class="carousel-inner">
-                                        <div class="carousel-item active">
-                                            <img class="d-block w-100" src="../assets/images/card-img-1.jpg" alt="First slide">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img class="d-block w-100" src="../assets/images/card-img-2.jpg" alt="Second slide">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img class="d-block w-100" src="../assets/images/card-img-3.jpg" alt="Third slide">
-                                        </div>
-                                    </div>
-                                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                         <span class="sr-only">Previous</span>   </a>
-                                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                   <span class="sr-only">Next</span>  </a>
+                            <h5 class="card-header">Recent Area</h5>
+                            <div class="card-body p-0">
+                                <div class="table-responsive">
+                                    <table class="table">
+                                        <thead class="bg-light">
+                                            <tr class="border-0">
+                                                <th class="border-0">#</th>
+                                                <th class="border-0">Area Name</th>
+                                                <th class="border-0">Area Id</th>
+                                                <th class="border-0">Total Area (km<sup>2</sup>)</th>
+                                                <th class="border-0">Scan Time</th>
+                                                <th class="border-0">Officer
+                                                <th>
+                                                <th class="border-0">Status</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>1</td>
+                                                <td>Madhupur</td>
+                                                <td>id000001 </td>
+                                                <td>20</td>
+                                                <td>27-08-2018 01:22:12</td>
+                                                <td>Patricia J. King </td>
+                                                <td><span class="badge-dot badge-brand mr-1"></span> Yellow leaf
+                                                    detected </td>
+                                            </tr>
+                                            <tr>
+                                                <td>2</td>
+                                                <td>Madhupur</td>
+                                                <td>id000002 </td>
+                                                <td>12</td>
+                                                <td>25-08-2018 21:12:56</td>
+                                                <td>Rachel J. Wicker </td>
+                                                <td><span class="badge-dot badge-success mr-1"></span>Yellow leaf
+                                                    detected </td>
+                                            </tr>
+                                            <tr>
+                                                <td>3</td>
+                                                <td>Madhupur</td>
+                                                <td>id000003 </td>
+                                                <td>23</td>
+                                                <td>24-08-2018 14:12:77</td>
+                                                <td>Michael K. Ledford </td>
+                                                <td><span class="badge-dot badge-success mr-1"></span>Yellow leaf
+                                                    detected </td>
+                                            </tr>
+                                            <tr>
+                                                <td>4</td>
+                                                <td>Madhupur</td>
+                                                <td>id000004 </td>
+                                                <td>34</td>
+                                                <td>23-08-2018 09:12:35</td>
+                                                <td>Michael K. Ledford </td>
+                                                <td><span class="badge-dot badge-success mr-1"></span>Yellow leaf
+                                                    detected </td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="9"><a href="#"
+                                                        class="btn btn-outline-light float-right">View Details</a></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
-                        
                     </div>
-                    <div class="row">
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-                            <h2>Disease ID: </h2>
-                            <p id="iddd">1620</p>
-                            <br>
-                            <h2>Disease Name :</h2>
-                            <p id="nameee">Yellow Leaf</p>
-                            <br>
-                            <h2>Symptoms:</h2>
-        
-                                <ul id="items1" class="list-group">
-                                    <li class="list-group-item">yellow spots on leaves</li>
-                                    <li class="list-group-item"></li>
-                                    <li class="list-group-item"></li>
-                                </ul> 
-                            <br>
-                            <h2>Reason Behind the disease :</h2>
-        
-                                <ul id="items2" class="list-group">
-                                    <li class="list-group-item">Improper watering</li>
-                                    <li class="list-group-item">Improper soil pH</li>
-                                    <li class="list-group-item">Lack of proper nutrients</li>
-                                </ul> 
+                    <div class="card">
+                        <h5 class="card-header">Plants</h5>
+                        <div class="card-body">
+                            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img class="d-block w-100" src="../assets/images/card-img-1.jpg"
+                                            alt="First slide">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src="../assets/images/card-img-2.jpg"
+                                            alt="Second slide">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src="../assets/images/card-img-3.jpg"
+                                            alt="Third slide">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                                    data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span> </a>
+                                <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                                    data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span> </a>
+                            </div>
                         </div>
-                        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
-                            <h2>Treatment :</h2>
-                                <h3>Chemical Treatment</h3>
-                                    <ul id="items3" class="list-group">
-                                        <li class="list-group-item">water only when soil feel dry</li>
-                                        <li class="list-group-item">Ironite Plus</li>
-                                        <li class="list-group-item">proper fertilization with trusted, premium plant foods</li>
-                                    </ul> 
-                                <h3>Physical Treatment</h3>
-                                    <ul id="items4" class="list-group">
-                                        <li class="list-group-item">water only when soil feel dry</li>
-                                        <li class="list-group-item">Do soil tests 3 times a month</li>
-                                        <li class="list-group-item">proper fertilization with trusted, premium plant foods</li>
-                                    </ul> 
-                        </div> 
                     </div>
+
                 </div>
             </div>
-
- 
-            <!-- ============================================================== -->
-            <!-- footer -->
-            {% include 'includes/footer.html' %}
-            <!-- end footer -->
-            <!-- ============================================================== -->
         </div>
+
+
+        <!-- ============================================================== -->
+        <!-- footer -->
+        {% include 'includes/footer.html' %}
+        <!-- end footer -->
+        <!-- ============================================================== -->
+    </div>
     </div>
     <!-- ============================================================== -->
     <!-- end main wrapper -->
@@ -187,5 +158,5 @@
     <script src="../assets/libs/js/main-js.js"></script>
     <script src="info.js"></script>
 </body>
- 
+
 </html>
