--- a/Dashboard/templates/history.html
+++ b/Dashboard/templates/history.html
@@ -44,7 +44,24 @@
             <div class="container-fluid dashboard-content">
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                        <h3 class="text-center">Content goes here!</h3>
+                    <div class="ecommerce-widget">
+                        <div class="row">
+                            <div class="col-xl-11 col-lg-11 col-md-11 col-sm-12 col-12">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h5 class="text-muted">Area Scanned</h5>
+                                        <div class="metric-value d-inline-block">
+                                            <h1 class="mb-1">12.55 km<sup>2</sup></h1>
+                                        </div>
+                                        <div class="metric-label d-inline-block float-right text-success font-weight-bold">
+                                            <span><i class="fa fa-fw fa-arrow-up"></i></span><span>5.86%</span>
+                                        </div>
+                                    </div>
+                                    <div id="sparkline-revenue"></div>
+                                    
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
