--- a/Dashboard/templates/includes/sidebar.html
+++ b/Dashboard/templates/includes/sidebar.html
@@ -12,7 +12,7 @@
                         Menu
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="/" aria-expanded="false" data-target="#submenu-1" aria-controls="submenu-1"><i class="fa fa-fw fa-user-circle"></i>Home</a>
+                        <a class="nav-link" href="/index" aria-expanded="false" data-target="#submenu-1" aria-controls="submenu-1"><i class="fa fa-fw fa-user-circle"></i>Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/field-operation" aria-expanded="false" data-target="#submenu-2" aria-controls="submenu-2"><i class="fa fa-fw fa-rocket"></i>Field Operation</a>
