--- a/Dashboard/templates/result.html
+++ b/Dashboard/templates/result.html
@@ -34,7 +34,9 @@
         <div class="dashboard-wrapper">
             <div class="container-fluid dashboard-content">
                 <div class="row">
-                    
+
+                    <!--Form inputs submit-->
+                    <div class="col-xl-12 col-lg-12 col-md-6 col-sm-12 col-12">
                     <form class="splash-container" action="/get_status" method="POST">
                         <div class="card">
                             <div class="card-header">
@@ -75,12 +77,13 @@
                             </div>
                     
                         </div>
-                    </form>
+                    </form> 
+                    </div>
 
 
 
 
-                    <div class="col-xl-9 col-lg-12 col-md-6 col-sm-12 col-12">
+                    <div class="col-xl-12 col-lg-12 col-md-6 col-sm-12 col-12">
                         <div class="card">
                             <div class="card-header">Test Image</div>
                             <div class="card-body">
@@ -148,6 +151,8 @@
                     </div>
                     {% endif %}
                 </div>
+
+                
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                         <div class="card">
@@ -170,11 +175,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                
 
-                    </div>
-                </div>
+                
+               
+
 
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
@@ -188,6 +193,13 @@
                     </div>
                 </div>
             </div>
+
+
+            
+
+           
+
+             
             <!-- ============================================================== -->
             <!-- footer -->
             {% include 'includes/footer.html' %}
